# ammonia

./: .gitignore  CMakeLists.txt  README.md  ammonia.h  compile.sh  install.sh  package.sh  setup_frida.sh
ammonia/: main.c  main.h  main.m
ammonia.xcodeproj/: project.pbxproj
ammonia.xcodeproj/project.xcworkspace/xcuserdata/bedtime.xcuserdatad/: UserInterfaceState.xcuserstate
ammonia.xcodeproj/xcshareddata/xcschemes/: ammonia.xcscheme  configurator.xcscheme
ammonia.xcodeproj/xcuserdata/bedtime.xcuserdatad/xcschemes/: xcschememanagement.plist
extravagant/: ammonia.c  ammonia.h
libinfect/: libinfect.c
opener/: opener.c  opener.h
